@@ -1,6 +1,6 @@
 {
 	"$schema": "https://json-schema.org/draft/2019-09/schema",
-	"description": "Standard header informations",
+	"description": "Standard header information",
 	"type": "object",
 	"properties": {
 		"recipient": {
@@ -9,16 +9,16 @@
 		"sender": {
 			"$ref": "SenderReceiverType.json"
 		},
-		"standard": {
+		"schemaUrl": {
 			"type": "string",
-			"description": "the URI should contain the Standard, type, subtype and version of the json document",
+			"description": "URL to the schema this json document adheres to. The URL must point to the respective schema in the EcoHub GitHub repository.",
 			"minLength": 1,
 			"format": "uri-reference",
 			"examples": [
-				"http://www.igb2b.ch/offer/nlpi/request/0.2.0",
-				"http://www.igb2b.ch/offer/nlpi/offer/0.2.0",
-				"http://www.igb2b.ch/offer/nlpi/feedback/0.2.0",
-				"http://www.igb2b.ch/offer/nlpi/conclusiondecision/0.2.0"
+				"https://raw.githubusercontent.com/EcoHub-AG/Standards/refs/tags/offer-nlpi-v0.5.0/schemas/Offer-NLPI/v0.5.0/offer-nlpi-root/OfferNlpiRequestDataType.json",
+				"https://raw.githubusercontent.com/EcoHub-AG/Standards/refs/tags/offer-nlpi-v0.5.0/schemas/Offer-NLPI/v0.5.0/offer-nlpi-root/OfferNlpiDataType.json",
+				"https://raw.githubusercontent.com/EcoHub-AG/Standards/refs/tags/offer-nlpi-v0.5.0/schemas/Offer-NLPI/v0.5.0/offer-nlpi-root/OfferNlpiFeedbackDataType.json",
+				"https://raw.githubusercontent.com/EcoHub-AG/Standards/refs/tags/offer-nlpi-v0.5.0/schemas/Offer-NLPI/v0.5.0/offer-nlpi-root/OfferNlpiConclusionDecisionDataType.json"
 			]
 		}
 	},
