@@ -1,6 +1,8 @@
 ### Version 0.5.5
 - BrokerType (Changed)
     - removed attribute "brokerContact" (moved to OfferNlpiRequestDataType)
+- HeaderType (Changed)
+    - renamed "standard" to "schemaUrl"
 - RegFINMANoType (Changed)
     - Changed format to support the new finma number format and disallow the old format
 
